--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "dependencies": {
     "express": "^4.21.0",
     "mongoose": "^8.6.2"
+  },
+  "devDependencies": {
+    "javascript": "^1.0.0"
   }
 }
